argocd/base/repo-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: ksops-plugin
              mountPath: /home/argocd/.config/kustomize/plugin
            - name: sops-age-key
              mountPath: /age-keys/keys.txt
              subPath: keys.txt

      volumes:
        - name: ksops-plugin
          emptyDir: {}

        - name: sops-age-key
          secret:
            secretName: sops-age
